# minicad

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: copy_assets.cmake  generate_clangd_file.cmake
cmake/dependencies/: CMakeLists.txt
docs/: ECS_experiment_ADR.md
examples/: cat.json  cat_detailed.k08  cat_flat.f10  cat_rough.k16  cat_smooth.json  fillin.json  fillin2.json  fillin3.json  fillin4.json
libminicad/: CMakeLists.txt
libminicad/libminicad/: experiments.hpp  scene_object.cpp
libminicad/libminicad/algorithm/: hole_finder.cpp  hole_finder.hpp  intersection_finder.cpp  intersection_finder.hpp  paths_generator.cpp  paths_generator.hpp
libminicad/libminicad/camera/: camera.cpp  camera.hpp
libminicad/libminicad/math/: bezier3.hpp
libminicad/libminicad/renderer/: rendering_command.hpp  rendering_state.hpp  scene_renderer.cpp  scene_renderer.hpp  visibility_state.hpp
libminicad/libminicad/renderer/gl/: approx_curve_renderer.cpp  approx_curve_renderer.hpp  buffer.hpp  curves_renderer.cpp  curves_renderer.hpp  fill_in_surfaces_renderer.cpp  fill_in_surfaces_renderer.hpp  intersection_curves_renderer.cpp  intersection_curves_renderer.hpp  line_buffer.hpp  opengl_scene_renderer.cpp  opengl_scene_renderer.hpp  param_primitive_renderer.cpp  param_primitive_renderer.hpp  patch_surface_renderer.cpp  patch_surface_renderer.hpp  point_lists_renderer.cpp  point_lists_renderer.hpp  point_object_renderer.cpp  point_object_renderer.hpp  points_buffer.hpp  rendering_state.cpp  rendering_state.hpp  scene_objects_renderer.cpp  scene_objects_renderer.hpp  subrenderer.hpp  texture_array.cpp  texture_array.hpp  trimming_texture_manager.hpp
libminicad/libminicad/scene/: approx_curve.cpp  approx_curve.hpp  arena.hpp  curve.cpp  curve.hpp  fill_in_suface.hpp  fill_in_surface.cpp  handles.hpp  intersection_curve.cpp  intersection_curve.hpp  param_primitive.cpp  param_primitive.hpp  patch_surface.cpp  patch_surface.hpp  point_list.cpp  point_list.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  scene_object_handle.hpp  triangle.hpp  trimming.cpp  trimming.hpp  types.hpp
libminicad/libminicad/serialization/json/: json.cpp  json.hpp  schema.hpp  schema.json
minicad/: CMakeLists.txt
minicad/assets/: bezier.tesc  bezier.tese  grid.frag  grid.vert  main.frag  main.vert  param.frag  param.tesc  param.tese  param.vert  polyline.frag  screen_quad.frag  screen_quad.vert  sprite.frag  sprite.vert  sprite_instanced.frag  sprite_instanced.geom  sprite_instanced.vert
minicad/assets/shaders/curves/: bezier.tesc  bezier.tese  bspline_c2.tesc  bspline_c2.tese  natural_spline_c2.tesc  natural_spline_c2.tese  polyline.vert
minicad/assets/shaders/parametric_surfaces/: param.frag  param.tesc  param.tese  param.vert
minicad/assets/shaders/patch_surfaces/: bezier.frag  bezier.tesc  bezier.tese  rational_bezier.tesc  rational_bezier.tese  surface.vert
minicad/assets/shaders/sprites/: helper_points.vert  sprite.frag  sprite_instanced.frag  sprite_instanced.vert
minicad/assets/shaders/utils/: anaglyph_merger.frag  grid.vert  lines.frag  lines.vert  solid_color.frag
minicad/minicad/: app.cpp  app.hpp  main.cpp
minicad/minicad/camera/: camera.cpp  camera.hpp  orbiting_camera_operator.cpp  orbiting_camera_operator.hpp
minicad/minicad/cursor/: cursor.cpp  cursor.hpp
minicad/minicad/fonts/: font_awesome.hpp
minicad/minicad/gui_components/: object_list.hpp
minicad/minicad/imgui/: modals.cpp  modals.hpp  reorder_dnd.cpp  reorder_dnd.hpp  transform.cpp  transform.hpp  transform_gizmo.cpp  transform_gizmo.hpp
minicad/minicad/selection/: selection.cpp  selection.hpp
minicad/minicad/tools/: select_tool.cpp  select_tool.hpp
patches/: imguizmo.patch
